--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="deepPurple300">#FF9575CD</color>
-    <color name="green300">#FF81C784</color>
-    <color name="green500">#FF4CAF50</color>
-    <color name="gray50">#FFFAFAFA</color>
-    <color name="gray200">#FFEEEEEE</color>
-    <color name="gray800">#FF424242</color>
-    <color name="gray900">#FF212121</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
